# fastapi-worker-template

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: conftest.py  main.py
app/core/: boot.py  config.py  deps.py  paths.py  security.py
app/workers/billing_ticket/: models.py  routes.py  services.py
app/workers/billing_ticket/tests/: test_calculate_ticket.py  test_calculate_ticket_jwt.py  test_calculate_variants.py  test_internal_ok.py  test_models_validation.py
scripts/: mint_token.py
